--- a/CandyStore/login.html
+++ b/CandyStore/login.html
@@ -24,5 +24,7 @@
 </div>
 <script src="js/auth-guard.js"></script>
 <script src="js/auth.js"></script>
+<script src="js/data.js"></script>
 </body>
 </html>
+
