--- a/CandyStore/purchased.html
+++ b/CandyStore/purchased.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Order Successful</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+<header>
+  <h1>🍭 Candy Store</h1>
+  <a href="#" onclick="logout()">Logout</a>
+</header>
+
+<div class="success-container">
+  <div class="success-card">
+
+    <div class="success-icon">🎉</div>
+    <h2>Order Placed Successfully!</h2>
+    <p>Your candies will be delivered soon 🍬</p>
+
+    <a href="index.html">Continue Shopping</a>
+
+  </div>
+</div>
+<script src="js/auth-guard.js"></script>
+</body>
+</html>
